screen page done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,6 @@
 .site-layout .site-layout-background {
   background: #fff;
 }
+#components-form-demo-control-hooks .ant-btn {
+  margin-right: 8px;
+}
